--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="progress-container">
         <div id="progress-bar">0%</div>
     </div>
-    <p>Get your .py files <a href="https://raw.githubusercontent.com/PBitMinecraft/MIDI-to-Oscillator/dev/audio_to_midi.py" download="audio_to_midi.py">Here!</a></p>
+    <p>Get your .mid files <a href="https://raw.githubusercontent.com/PBitMinecraft/MIDI-to-Oscillator/dev/audio_to_midi.py" download="audio_to_midi.py">Here!</a></p>
     <p>Run "pip install aubio numpy mido soundfile" in you terminal or command propmt then run the script like so:</p>
     <p>"python audio_to_midi.py input.mp3 output.mid"</p>
 
